--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,10 +1,13 @@
 # List the start up tasks. Learn more https://www.gitpod.io/docs/config-start-tasks/
 tasks:
   - init: echo 'init script' # runs during prebuild
-    command: echo 'start script'
+    command: echo 'start script'    
+
+  - command: sshfs.add pi
+
   - name: remote_terminal
     init: ssh pi@149.0.56.172
-    command: echo 'should be working now'
+    command: echo 'should be working now'    
 
 # List the ports to expose. Learn more https://www.gitpod.io/docs/config-ports/
 ports:
